--- a/.gitignore
+++ b/.gitignore
@@ -13,7 +13,7 @@ dist
 # Specifics
 
 # Hide compiled CSS
-src/_includes/assets/styles/*
+src/_includes/assets/styles/*.css
 
 # Hide compiled functions
 functions/*.zip
